tests/ui/const-generics/issues/issue-88119.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/issue-88119.rs:4:30
   |
LL | #![feature(const_trait_impl, generic_const_exprs)]
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error[E0284]: type annotations needed: cannot satisfy `the constant `name_len::<T>()` can be evaluated`
  --> $DIR/issue-88119.rs:21:5
   |
LL |     [(); name_len::<T>()]:,
   |     ^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `the constant `name_len::<T>()` can be evaluated`
   |
note: required by a bound in `<&T as ConstName>`
  --> $DIR/issue-88119.rs:21:10
   |
LL |     [(); name_len::<T>()]:,
   |          ^^^^^^^^^^^^^^^ required by this bound in `<&T as ConstName>`

error[E0284]: type annotations needed: cannot satisfy `the constant `name_len::<T>()` can be evaluated`
  --> $DIR/issue-88119.rs:28:5
   |
LL |     [(); name_len::<T>()]:,
   |     ^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `the constant `name_len::<T>()` can be evaluated`
   |
note: required by a bound in `<&mut T as ConstName>`
  --> $DIR/issue-88119.rs:28:10
   |
LL |     [(); name_len::<T>()]:,
   |          ^^^^^^^^^^^^^^^ required by this bound in `<&mut T as ConstName>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0284`.
